--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,10 @@ sqlalchemy~=2.0.23
 alembic~=1.13.0
 aiosqlite~=0.19.0
 
+# PostgreSQL support
+asyncpg~=0.29.0
+psycopg2-binary~=2.9.7
+
 # HTTP client
 httpx~=0.25.2
 
@@ -19,6 +23,10 @@ pydantic-settings~=2.1.0
 
 # Logging
 structlog~=23.2.0
+
+# Azure services
+azure-keyvault-secrets~=4.7.0
+azure-identity~=1.15.0
 
 # Testing (development)
 pytest~=7.4.3
