--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,35 +7,39 @@ services:
       context: ./backend
       dockerfile: Dockerfile
       target: development
+    container_name: qrai_backend
     ports:
       - "8000:8000"
     environment:
-      - ENV=development
-      - LOG_LEVEL=DEBUG
+      # Docker/コンテナ専用設定
       - PYTHONPATH=/app
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONUNBUFFERED=1
-
-      # Database (開発用はSQLite)
-      - QRAI_DATABASE_URL=sqlite+aiosqlite:///./test.db
-
-      # LLM Provider設定（環境変数から取得）
-      - QRAI_LLM_PRIMARY_PROVIDER=${LLM_PRIMARY_PROVIDER:-openrouter}
-      - QRAI_LLM_FALLBACK_PROVIDERS=${LLM_FALLBACK_PROVIDERS:-google_ai,azure_openai}
-
-      # Key Vault（開発環境では直接環境変数）
-      - QRAI_OPENROUTER_API_KEY=${OPENROUTER_API_KEY:-}
-      - QRAI_GOOGLE_AI_API_KEY=${GOOGLE_AI_API_KEY:-}
-      - QRAI_AZURE_OPENAI_API_KEY=${AZURE_OPENAI_API_KEY:-}
-      - QRAI_AZURE_OPENAI_ENDPOINT=${AZURE_OPENAI_ENDPOINT:-}
-
-      # Azure Search（開発環境では無効化可能）
-      - QRAI_AZURE_SEARCH_ENDPOINT=${AZURE_SEARCH_ENDPOINT:-}
-      - QRAI_AZURE_SEARCH_API_KEY=${AZURE_SEARCH_API_KEY:-}
-
+      # Database Configuration
+      - DATABASE_URL=postgresql+asyncpg://qrai_user:dev_password_123@postgres:5432/qrai_dev
+      # Application Settings
+      - ENVIRONMENT=development
+      - LOG_LEVEL=DEBUG
+      - PORT=8000
+      # API Keys (Development用ダミー値)
+      - OPENROUTER_API_KEY=dummy_openrouter_key_for_dev
+      - GOOGLE_AI_API_KEY=dummy_google_ai_key_for_dev
+      # Security Settings (Development用)
+      - JWT_SECRET_KEY=dev_jwt_secret_key_1234567890123456789012345678901234567890
+      - SESSION_SECRET_KEY=dev_session_secret_key_1234567890123456789012345678901234567890
+      # Azure Settings (Development用ダミー値)
+      - AZURE_OPENAI_ENDPOINT=https://dummy-dev.openai.azure.com/
+      - AZURE_OPENAI_API_KEY=dummy_azure_openai_key_for_dev
+      - AZURE_SEARCH_ENDPOINT=https://dummy-dev.search.windows.net/
+      - AZURE_SEARCH_API_KEY=dummy_azure_search_key_for_dev
+      - AZURE_KEYVAULT_URL=https://dummy-dev.vault.azure.net/
     volumes:
       - ./backend:/app
       - backend_cache:/root/.cache
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -76,20 +80,22 @@ services:
   # PostgreSQL (本番環境のCosmos DB代替)
   postgres:
     image: postgres:15-alpine
+    container_name: qrai_postgres
+    env_file:
+      - .env.development  # PostgreSQL設定も.envから読み込み
     environment:
-      - POSTGRES_DB=qrai_dev
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --locale=ja_JP.UTF-8"
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./backend/scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./scripts/init_postgres.sql:/docker-entrypoint-initdb.d/01_init.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U qrai_user -d qrai_dev"]
       interval: 10s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
     networks:
       - qrai-network
 
