--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,6 +27,8 @@ structlog~=23.2.0
 # Azure services
 azure-keyvault-secrets~=4.7.0
 azure-identity~=1.15.0
+azure-search-documents~=11.4.0
+azure-storage-blob~=12.19.0
 
 # Testing (development)
 pytest~=7.4.3
