feat(backend): integrate Azure Blob Storage - Task 3-1B-1 complete

--- a/.env.sample
+++ b/.env.sample
@@ -46,6 +46,13 @@ AZURE_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  # pragma: allowlist secret
 AZURE_TENANT_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 
 # -----------------------------------------------------------------------------
+# 🪣 Azure Storage設定
+# -----------------------------------------------------------------------------
+AZURE_STORAGE_ACCOUNT_NAME=xxxxxxxxxx
+AZURE_STORAGE_ACCOUNT_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  # pragma: allowlist secret
+AZURE_STORAGE_CONTAINER_NAME=documents
+
+# -----------------------------------------------------------------------------
 # 📊 監視・ログ設定
 # -----------------------------------------------------------------------------
 # ログレベル: DEBUG, INFO, WARNING, ERROR, CRITICAL
