test: add sample documents collection script and manual upload procedures - Add lightweight test document collection script - Create Azure Portal upload procedures - Add document processing pipeline - Complete Task 3-2B-2 and Task 3-3A-1

--- a/.gitignore
+++ b/.gitignore
@@ -510,6 +510,9 @@ dev-data/
 sample-data/
 mock-data/
 
+# テストドキュメント（一時的なファイル）
+test_documents/
+
 # パフォーマンステスト結果
 performance-reports/
 load-test-results/
