--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,6 +30,16 @@ azure-identity~=1.15.0
 azure-search-documents~=11.4.0
 azure-storage-blob~=12.19.0
 
+# Document parsing
+PyPDF2~=3.0.1
+pdfplumber~=0.9.0
+python-docx~=0.8.11
+
+# Dataset collection
+datasets~=2.14.0
+pandas~=2.1.0
+requests~=2.31.0
+
 # Testing (development)
 pytest~=7.4.3
 pytest-cov~=4.1.0
