feat(deep-research): implement LangGraph core components - final formatting

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,6 +4,7 @@ warn_return_any = True
 warn_unused_configs = True
 disallow_untyped_defs = False
 check_untyped_defs = False
+explicit_package_bases = True
 
 # backend ディレクトリをPythonパスに追加
 mypy_path = backend
@@ -21,4 +22,16 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-strawberry.*]
+ignore_missing_imports = True
+
+[mypy-langgraph.*]
+ignore_missing_imports = True
+
+[mypy-langchain.*]
+ignore_missing_imports = True
+
+[mypy-langchain_core.*]
+ignore_missing_imports = True
+
+[mypy-langchain_community.*]
 ignore_missing_imports = True
