--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -51,3 +51,8 @@ pytest-mock~=3.12.0
 black==23.11.0
 ruff==0.1.6
 isort==5.12.0
+
+# LangGraph Agentic RAG
+langgraph~=0.0.42
+langchain-core~=0.1.42
+langchain-community~=0.0.23
