feat(deep-research): complete Phase 4 LangGraph Deep Research implementation

--- a/.env.sample
+++ b/.env.sample
@@ -94,6 +94,9 @@ RELOAD=true
 FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:8000
 
+NEXT_PUBLIC_GRAPHQL_WS_URL=ws://localhost:8000/graphql
+NEXT_PUBLIC_GRAPHQL_URL=http://localhost:8000/graphql
+
 # -----------------------------------------------------------------------------
 # 🔧 デバッグ・開発ツール
 # -----------------------------------------------------------------------------
