--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "graphql": "^16.11.0",
+    "graphql-ws": "5.16.2",
     "lucide-react": "^0.513.0",
     "next": "^14.2.29",
     "react": "^18.3.1",
