--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,9 +17,9 @@ psycopg2-binary~=2.9.7
 # HTTP client
 httpx~=0.25.2
 
-# Configuration
-pydantic~=2.5.0
-pydantic-settings~=2.1.0
+# Configuration - Python 3.12.4互換性修正
+pydantic>=2.8.0
+pydantic-settings>=2.1.0
 
 # Logging
 structlog~=23.2.0
@@ -51,3 +51,9 @@ pytest-mock~=3.12.0
 black==23.11.0
 ruff==0.1.6
 isort==5.12.0
+
+# LangGraph Agentic RAG - Python 3.12.4互換バージョン
+langgraph>=0.0.69
+langchain-core>=0.2.8
+langchain-community>=0.2.5
+langchain>=0.2.5
